--- a/Team.html
+++ b/Team.html
@@ -118,13 +118,13 @@
 											<img src="images/Photo/FangZijie.jpg" style="float:left;width:120px;margin:5px">
 											<p><strong>Zijie Fang</strong> is currently working towards his B.S. degree in Computer Science and Technology at School of Computer and Software in Nanjing University of Information Science and Technology. His research interests include edge computing and IoT.</p>
 											</br></br></br></br>
+											<img src="images/Photo/ShenBowen.JPG" style="float:left;width:120px;margin:5px">
+											<p><strong>Bowen Shen</strong> is currently working towards his B.S. degree in Computer Science and Technology at School of Computer and Software in Nanjing University of Information Science and Technology. His research interests include edge computing and IoT.</p>
+											</br></br></br></br>
 											<img src="images/Photo/HuangQihe.jpg" style="float:left;width:120px;margin:5px">
 											<p><strong>Qihe Huang</strong> is currently working towards his B.S. degree in Computer Science and Technology at School of Computer and Software in Nanjing University of Information Science and Technology. His research interests include edge computing and IoT.</p>
 											</br></br></br></br>
-											<img src="images/Photo/ShenBowen.jpg" style="float:left;width:120px;margin:5px">
-											<p><strong>Bowen Shen</strong> is currently working towards his B.S. degree in Computer Science and Technology at School of Computer and Software in Nanjing University of Information Science and Technology. His research interests include edge computing and IoT.</p>
-											</br></br></br></br>
-											<img src="images/Photo/YanXuan.jpg" style="float:left;width:120px;margin:5px">
+											<img src="images/Photo/YanXuan.JPG" style="float:left;width:120px;margin:5px">
 											<p><strong>Xuan Yan</strong> is currently working towards his B.S. degree in Computer Science and Technology at School of Computer and Software in Nanjing University of Information Science and Technology. His research interests include edge computing and IoT.</p>
 											</br></br></br></br>
 										</div>
