--- a/index.html
+++ b/index.html
@@ -152,9 +152,9 @@
 									</tr>
 									<tr>
 										<td><img src=images/Photo/FangZijie.jpg  style="height:150px" title="">Zijie Fang</td>
-										<td><img src=images/Photo/ShenBowen.jpg style="height:150px" title="Bowen Shen is currently working towards his B.S. degree in Computer Science and Technology at School of Computer and Software in Nanjing University of Information Science and Technology. His research interests include edge computing and IoT.">Bowen Shen</td>
+										<td><img src=images/Photo/ShenBowen.JPG style="height:150px" title="Bowen Shen is currently working towards his B.S. degree in Computer Science and Technology at School of Computer and Software in Nanjing University of Information Science and Technology. His research interests include edge computing and IoT.">Bowen Shen</td>
 										<td><img src=images/Photo/HuangQihe.jpg style="height:150px" title="">Qihe Huang</td>
-										<td><img src=images/Photo/YanXuan.jpg style="height:150px" title="">Xuan Yan</td>
+										<td><img src=images/Photo/YanXuan.JPG style="height:150px" title="">Xuan Yan</td>
 									</tr>
 								</table> 
 								<!--
@@ -221,7 +221,7 @@
 						<!-- Five -->
 							<section id="five">
 								<div class="container">
-									<h3>Co-authors</h3><a href="Co-authors.html" style="float:right;font:10px">View details</a></h3>
+									<h3>Co-authors<a href="Co-authors.html" style="float:right;font:10px">View details</a></h3>
 								</br>
 								<table>
 									<tr>
