--- a/Publications.html
+++ b/Publications.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Xiaolong Xu</title>
+		<title>Detail of Xiaolong Xu's publications</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -599,8 +599,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<div class="container">
 							<ul class="copyright">
 								<li>&copy; Xiaolong Xu. All rights reserved.</li>
-<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-
 							</ul>
 						</div>
 					</section>
