--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 						-->
 						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="mailto:xlxu@nuist.edu.cn" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</footer>
 			</section>
@@ -51,7 +51,7 @@
 							<section id="one">
 								<div class="container">
 									<header class="major">
-										<img src="images/Photo/XuXiaolong.jpg" style="float:right; margin:10px; padding:10px;" height="350px">
+										<img src="images/Photo/XuXiaolong.jpg" style="float:right; margin:10px; padding:10px;" width="40%" height="auto">
 										<h3>Xiaolong Xu</h3>
 										<h4>School of Computer and Software<br/>
 											Nanjing University of Information Science and Technology<br/>
@@ -103,7 +103,7 @@
 						<!-- Three -->
 							<section id="three">
 								<div class="container">
-									<h3>Publications<a href="Publications.html" style="float:right;font:10px">View more</a></h3>
+									<h3>Publications<a href="Publications.html" style="float:right;font:10px">Details</a></h3>
 									</br>
 									<ul style="text-align: justify;">
 										<li id="h.p_Aw1o70nnDu3c" class="TYR86d zfr3Q" style="white-space: normal;"><strong>[ICSOC'19] Xiaolong Xu,</strong> Yuan Xue, Lianyong Qi, Xuyun Zhang, Shaohua Wan, Wanchun Dou, Victor Chang. Load-aware Edge Server Placement for Mobile Edge Computing in 5G networks. The 17th International Conference on Service-Oriented Computing, 2019.<strong> (Accept Rate: 15%)</strong></li>
@@ -122,41 +122,55 @@
 						<!-- Four -->
 						<section id="four">
 							<div class="container">
-								<h3>Team<a href="Team.html" style="float:right;font:10px">View details</a></h3>
+								<h3>Team<a href="Team.html" style="float:right;font:10px">Details</a></h3>
 								</br>
-								<table>
+								<table style="text-align:center">
 									<h4>Master</h4>
 									<tr>
-										<td><img src=images/Photo/FuShucun.png  style="height:150px" title="Shuncun Fu received his B.S. in Internet of Things Engineering from Binjiang College, Nanjing University of Information Science and Technology in 2017. Currently he is studying for a master’s degree in Software Engineering in Nanjing University of Information Science and Technology. His areas of interest are mobile computing, big data, cloud computing and machine learning.">Shuncun Fu</td>
-										<td><img src=images/Photo/LiuXihua.jpg  style="height:150px" title="">Xihua Liu</td>
-										<td><img src=images/Photo/MoRuichao.jpg  style="height:150px" title="Ruichao Mo received his B.S. in Software Engineering from Binjiang College, Nanjing University of Information Science and Technology in 2019. He is currently studying for his master’s degree in Computer Science and Technology in Nanjing University of Information Science and Technology. His areas of interest are mobile computing, big data, cloud computing and machine learning.">Ruichao Mo</td>
-										<td><img src=images/Photo/ZhuDawei.jpg  style="height:150px" title="">Dawei Zhu</td>
+										<td><img src="images/Photo/FuShucun.png" style="height:150px"><p style="text-align:center">Shuncun Fu</p></td>
+										<td><img src=images/Photo/LiuXihua.jpg  style="height:150px" title=""><p style="text-align:center">Xihua Liu</p></td>
+										<td><img src=images/Photo/MoRuichao.jpg  style="height:150px" title=""><p style="text-align:center">Ruichao Mo</p></td>
 									</tr>
 									<tr>
-										<td><img src=images/Photo/WuQi.jpg  style="height:150px" title="">Qi Wu</td>
-										<td><img src=images/Photo/ZhangXing.jpg style="height:150px" title="">Xing Zhang</td>
-										<td><img src=images/Photo/HeChengxun.jpg style="height:150px" title="">Chengxun He</td>
+										<td><img src=images/Photo/ZhuDawei.jpg  style="height:150px" title=""><p style="text-align:center">Dawei Zhu</p></td>
+										<td><img src=images/Photo/WuQi.jpg  style="height:150px" title=""><p style="text-align:center">Qi Wu</p></td>
+										<td><img src=images/Photo/ZhangXing.jpg style="height:150px" title=""><p style="text-align:center">Xing Zhang</p></td>
+									</tr>
+									<tr>
+										<td><img src=images/Photo/HeChengxun.png style="height:150px" title=""><p style="text-align:center">Chengxun He</p></td>
 									</tr>
 								</table>
-								<table>
+								<table style="text-align:center">
 									<h4>Bachalor</h4>
 									<tr>
-										<td><img src=images/Photo/CaiQing.jpg style="height:150px" title="">Qing Cai</td>
-										<td><img src=images/Photo/LiuQingxiang.jpg style="height:150px" title="">Qingxiang Liu</td>
+										<td><img src=images/Photo/CaiQing.jpg style="height:150px" title=""><p style="text-align:center">Qing Cai (graduated)</p></td>
+										<td><img src=images/Photo/LiuQingxiang.jpg style="height:150px" title=""><p style="text-align:center">Qingxiang Liu</p></td>
+										<td><img src=images/Photo/ChenYuhao.jpg style="height:150px" title=""><p style="text-align:center">Yuhao Chen</p></td>
 									</tr>
 									<tr>
-										<td><img src=images/Photo/XueYuan.jpg style="height:150px" title="">Yuan Xue</td>
-										<td><img src=images/Photo/ChenYi.jpg  style="height:150px" title="">Yi Chen</td>
-										<td><img src=images/Photo/CaoHao.jpg  style="height:150px" title="">Hao Cao</td>
-										<td><img src=images/Photo/LiXiang.jpg  style="height:150px" title="">Xiang Li</td>
+										<td><img src=images/Photo/XueYuan.jpg style="height:150px" title=""><p style="text-align:center">Yuan Xue</p></td>
+										<td><img src=images/Photo/ChenYi.jpg  style="height:150px" title=""><p style="text-align:center">Yi Chen</p></td>
+										<td><img src=images/Photo/CaoHao.jpg  style="height:150px" title=""><p style="text-align:center">Hao Cao</p></td>
 									</tr>
 									<tr>
-										<td><img src=images/Photo/FangZijie.jpg  style="height:150px" title="">Zijie Fang</td>
-										<td><img src=images/Photo/ShenBowen.JPG style="height:150px" title="Bowen Shen is currently working towards his B.S. degree in Computer Science and Technology at School of Computer and Software in Nanjing University of Information Science and Technology. His research interests include edge computing and IoT.">Bowen Shen</td>
-										<td><img src=images/Photo/HuangQihe.jpg style="height:150px" title="">Qihe Huang</td>
-										<td><img src=images/Photo/YanXuan.JPG style="height:150px" title="">Xuan Yan</td>
+										<td><img src=images/Photo/LiXiang.jpg  style="height:150px" title=""><p style="text-align:center">Xiang Li</p></td>
+										<td><img src=images/Photo/LiYuancheng.jpg  style="height:150px" title=""><p style="text-align:center">Yuancheng Li</p></td>
+										<td><img src=images/Photo/GengQingfan.jpg  style="height:150px" title=""><p style="text-align:center">Qingfan Geng</p></td>
 									</tr>
-								</table> 
+									<tr>
+										<td><img src=images/Photo/JiangGaoxing.jpg  style="height:150px" title=""><p style="text-align:center">Gaoxing Jiang</p></td>
+										<td><img src=images/Photo/HuangRui.jpg  style="height:150px" title=""><p style="text-align:center">Rui Huang</p></td>
+										<td><img src=images/Photo/FangZijie.jpg  style="height:150px" title=""><p style="text-align:center">Zijie Fang</p></td>
+									</tr>
+									<tr>
+										<td><img src=images/Photo/ShenBowen.JPG style="height:150px" title=""><p style="text-align:center">Bowen Shen</p></td>
+										<td><img src=images/Photo/HuangQihe.jpg style="height:150px" title=""><p style="text-align:center">Qihe Huang</p></td>
+										<td><img src=images/Photo/YanXuan.JPG style="height:150px" title=""><p style="text-align:center">Xuan Yan</p></td>
+									</tr>
+									<tr>
+										<td><img src=images/Photo/WangShuo.jpg style="height:150px" title=""><p style="text-align:center">Shuo Wang</p></td>
+									</tr>
+								</table>
 								<!--
 								<ul style="text-align: justify;">
 									<img src="images/Photo/FuShucun.png" style="float:left; margin:5px; padding:5px; text-align:center; height:150px; line-height:100%" >
@@ -221,16 +235,23 @@
 						<!-- Five -->
 							<section id="five">
 								<div class="container">
-									<h3>Co-authors<a href="Co-authors.html" style="float:right;font:10px">View details</a></h3>
+									<h3>Co-authors<a href="Co-authors.html" style="float:right;font:10px">Details</a></h3>
 								</br>
-								<table>
+								<table style="text-align:center">
 									<tr>
-										<td><img src=images/Photo/DouWanchun.jpg  style="height:150px" title="">Wanchun Dou</td>
-										<td><img src=images/Photo/QiLianYong.png  style="height:150px" title="">Lianyong Qi</td>
-										<td><img src=images/Photo/HeQiang.jpg  style="height:150px" title="">Qiang He</td>
-										<td><img src=images/Photo/WanShaohua.jpg  style="height:150px" title="">Shaohua Wan</td>
-										<td><img src=images/Photo/ZhangXuyun.jpg  style="height:150px" title="">Xuyun Zhang</td>
-										<td><img src=images/Photo/LiShancang.jpg  style="height:150px" title="">Shancang Li</td>
+										<td><img src=images/Photo/DouWanchun.jpg  style="height:150px" title=""><p style="text-align:center">Wanchun Dou</p></td>
+										<td><img src=images/Photo/QiLianYong.jpg  style="height:150px" title=""><p style="text-align:center">Lianyong Qi</p></td>
+										<td><img src=images/Photo/HeQiang.jpg  style="height:150px" title=""><p style="text-align:center">Qiang He</p></td>
+									</tr>
+									<tr>
+										<td><img src=images/Photo/WanShaohua.jpg  style="height:150px" title=""><p style="text-align:center">Shaohua Wan</p></td>
+										<td><img src=images/Photo/ZhangXuyun.jpg  style="height:150px" title=""><p style="text-align:center">Xuyun Zhang</p></td>
+										<td><img src=images/Photo/LiShancang.jpg  style="height:150px" title=""><p style="text-align:center">Shancang Li</p></td>
+									</tr>
+									<tr>
+										<td><img src=images/Photo/DaiFei.jpg  style="height:150px" title=""><p style="text-align:center">Fei Dai</p></td>
+										<td><img src=images/Photo/GaoHonghao.jpg  style="height:150px" title=""><p style="text-align:center">Honghao Gao</p></td>
+										<td><img src=images/Photo/YuanYuan.png  style="height:150px" title=""><p style="text-align:center">Yuan Yuan</td>
 									</tr>
 								</table>
 
@@ -649,8 +670,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<div class="container">
 							<ul class="copyright">
 								<li>&copy; Xiaolong Xu. All rights reserved.</li>
-<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-
 							</ul>
 						</div>
 					</section>
