--- a/Co-authors.html
+++ b/Co-authors.html
@@ -6,20 +6,11 @@
 -->
 <html>
 	<head>
-		<title>Xiaolong Xu</title>
+		<title>Detail of co-authors</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<style>
-			.box {
-				text-align: justify;
-				margin: 10px;
-			}
-			.box p{
-				display: table-cell;
-				vertical-align: middle;
-			}
-		</style>
+		
 	</head>
 	<body class="is-preload">
 
@@ -31,8 +22,7 @@
 				</header>
 				<nav id="nav">
 					<ul>
-						<li><a href="#one" class="active">Master</a></li>
-						<li><a href="#two">Bachalor</a></li>
+						<li><a href="#one" class="active">Co-authors</a></li>
 						<li><a href="index.html">Back</a></li>
 					</ul>
 				</nav>
@@ -63,19 +53,32 @@
 											</br>
 											<img src="images/Photo/DouWanchun.jpg" style="float:left;width:120px;margin:5px" /> 
 											<p><strong>Wanchun Dou</strong> received the Ph.D. degree in mechanical and electronic engineering from the Nanjing University of Science and Technology, China, in 2001. He is currently a Full Professor of the State Key Laboratory for Novel Software Technology, Nanjing University. From April 2005 to June 2005 and from November 2008 to February 2009, he respectively visited the Department of Computer Science and Engineering, Hong Kong University of Science and Technology, Hong Kong, as a Visiting Scholar. Up to now, he has chaired three National Natural Science Foundation of China projects and published more than 60 research papers in international journals and international conferences.His reserach interests include workflow, cloud computing, and service computing.</p>
-
+											</br>
 											<img src="images/Photo/QiLianyong.jpg" style="float:left;width:120px;margin:5px" /> 
 											<p><strong>Lianyong Qi</strong> received his PhD degree in Department of Computer Science and Technology from Nanjing University, China, in 2011. Now, he is an associate professor of the School of Information Science and Engineering, Chinese Academy of Education Big Data, Qufu Normal University, China. He has already published more than 50 papers including JSAC, TCC, TBD, FGCS, JCSS, CCPE, ICWS and ICSOC, etc. His research interests include services computing, big data and IoT.</p>
-
+											</br></br>
 											<img src="images/Photo/HeQiang.jpg" style="float:left;width:120px;margin:5px" /> 
 											<p><strong>Qiang He</strong> received his first Ph. D. degree from Swinburne University of Technology (SUT), Australia, in 2009 and his second Ph. D. degree in computer science and engineering from Huazhong University of Science and Technology (HUST), China, in 2010. He is a senior lecturer at Swinburne University of Technology, Australia. His research interests include services computing and big data.</p>
-
+											</br></br>
 											<img src="images/Photo/WanShaohua.jpg" style="float:left;width:120px;margin:5px" /> 
 											<p><strong>Shaohua Wan</strong> received his Ph.D. degree from the School of Computer, Wuhan University, in 2010. From 2015, he worked as a postdoc at the State Key Laboratory of Digital Manufacturing Equipment and Technology, Huazhong University of Science and Technology. From 2016 to 2017, he worked as a visiting scholar at the Department of Electrical and Computer Engineering at the Technical University of Munich, Germany. He is currently an associate professor and master advisor at the School of Information and Safety Engineering, Zhongnan University of Economics and Law. His research interests include massive data computing for Internet of Things and edge computing.</p>
-
+											</br>
 											<img src="images/Photo/ZhangXuyun.jpg" style="float:left;width:120px;margin:5px" /> 
 											<p><strong>Xuyun Zhang</strong> is a lecturer in the Department of Electrical & Computer Engineering at the University of Auckland, New Zealand. Prior to his current appointment, he worked as a postdoctoral fellow in the Machine Learning Research Group of NICTA (currently Data61, CSIRO) in Australia. He received his PhD degree from University of Technology, Sydney (UTS, Australia) in 2014, as well as his ME and BS degrees in Computer Science from Nanjing University (China) in 2011 and 2008, respectively. His primary research interests include IoT and smart cities, big data, cloud computing, scalable machine learning & data mining, data privacy & security, and Web service technology.</p>
-
+											</br>
+											<img src="images/Photo/LiShancang.jpg" style="float:left;width:120px;margin:5px" /> 
+											<p><strong>Shancang Li</strong> is currently with the Department of Computer Science and Creative Technologies, University of the West of England, Bristol, U.K. His current research interests include digital forensics for emerging technologies, cyber security, IoT security, data privacy preserving, Internet of Things, Blockchain technology, and the lightweight cryptography in resource constrained devices. He has authored more than 60 papers published in highprofile journals and conferences. He is the Associate Editor of IEEE ACCESS and Journal of Industrial Information Integration.</p>
+											</br>
+											<img src="images/Photo/DaiFei.jpg" style="float:left;width:120px;margin:5px" /> 
+											<p><strong>Fei Dai</strong> received a B.E degree from Yunnan University and a Ph.D. degree from Yunnan University, respectively. He is currently a professor with School of big data and Intelligence Engineering, Southwest Forestry University Kunming, China. He has authored and co-authored more than 50 scientific articles. Over the past years, his research interests include machine learning, business process manage-ment and software engineering.</p>
+											</br></br></br>
+											<img src="images/Photo/GaoHonghao.jpg" style="float:left;width:120px;margin:5px" /> 
+											<p><strong>Honghao Gao</strong> is currently an associate professor of School of Computer Engineering and Science, Shanghai University, China. He was a JSPS Research Fellow with the Department of Human Informatics and Cognitive Sciences, Waseda University, Japan from Nov. 2012 to Jan. 2013. He was a visiting scholar in Department of Computer Science at the University of California at Santa Barbara supported by China Scholarship Council from Dec. 2015 to Dec. 2016. He has been engaged in the extensively research works in the fields of computer science, service computing, Business process management, and database technology. His current research interests include social computing, data mining and analytics, group behavior modeling and simulating, and service recommendation.</p>
+											</br>
+											<img src="images/Photo/YuanYuan.png" style="float:left;width:120px;margin:5px" /> 
+											<p><strong>Yuan Yuan</strong> is currently a Postdoctoral Research Fellow with the Department of Computer Science and Engineering, Michigan State University, USA. He received the Ph.D. degree from the Department of Computer Science and Technology, Tsinghua University, Beijing, China, in 2015. From 2014 to 2015, he was a visiting Ph.D. student with the Centre of Excellence for Research in Computational Intelligence and Applications, University of Birmingham, U.K. He worked as a Research Fellow at the School of Computer Science and Engineering, Nanyang Technological University, Singapore, from 2015 to 2016. His research interests include evolutionary computation, machine learning, and search-based software engineering.</p>
+											</br>
+											
 											
 										</div>
 									</ul>
@@ -88,8 +91,6 @@
 						<div class="container">
 							<ul class="copyright">
 								<li>&copy; Xiaolong Xu. All rights reserved.</li>
-<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-
 							</ul>
 						</div>
 					</section>
