--- a/Team.html
+++ b/Team.html
@@ -60,7 +60,7 @@
 											</br>
 											</br>
 											<img src="images/Photo/LiuXihua.jpg" style="float:left;width:120px;margin:5px" /> 
-											<p><strong>Xihua Liu</strong> received his B.S. in Software Engineering from Binjiang College, Nanjing University of Information Science and Technology in 2018. He is currently studying for his master’s degree in Computer Science and Technology in Nanjing University of Information Science and Technology. His areas of interest are</p>
+											<p><strong>Xihua Liu</strong> received his B.S. in Internet of Things Engineering from Huaiyin Institute of Technology in 2017. Currently, he is studying for a master’s degree in Software Engineering in Nanjing University of Information Science and Technology. His areas of interest are mobile computing, big data, cloud Computing and machine learning.</p>
 											</br></br>
 											</br>
 											<img src="images/Photo/MoRuichao.jpg" style="float:left;width:120px;margin:5px">
@@ -116,7 +116,7 @@
 											</br></br></br></br>
 											
 											<img src="images/Photo/FangZijie.jpg" style="float:left;width:120px;margin:5px">
-											<p><strong>Zijie Fang</strong> is currently working towards his B.S. degree in Computer Science and Technology at School of Computer and Software in Nanjing University of Information Science and Technology. His research interests include edge computing and IoT.</p>
+											<p><strong>Zijie Fang</strong> is currently working towards his B.S. degree in Computer Science and Technology at School of Computer and Software in Nanjing University of Information Science and Technology. His research interests include Deep Learning and Edge Computing.</p>
 											</br></br></br></br>
 											<img src="images/Photo/ShenBowen.JPG" style="float:left;width:120px;margin:5px">
 											<p><strong>Bowen Shen</strong> is currently working towards his B.S. degree in Computer Science and Technology at School of Computer and Software in Nanjing University of Information Science and Technology. His research interests include edge computing and IoT.</p>
@@ -125,7 +125,7 @@
 											<p><strong>Qihe Huang</strong> is currently working towards his B.S. degree in Computer Science and Technology at Nanjing University of Information Science and Technology. His research interests include Internet of Things (IoT) and Mobile edge computing.</p>
 											</br></br></br></br>
 											<img src="images/Photo/YanXuan.JPG" style="float:left;width:120px;margin:5px">
-											<p><strong>Xuan Yan</strong> is currently working towards his B.S. degree in Computer Science and Technology at School of Computer and Software in Nanjing University of Information Science and Technology. His research interests include edge computing and IoT.</p>
+											<p><strong>Xuan Yan</strong> is currently working towards his B.S. degree in Computer Science and Technology at School of Computer and Software in Nanjing University of Information Science and Technology. His research interests include Big Data and Edge Computing.</p>
 											</br></br></br></br>
 											<img src="images/Photo/WangShuo.jpg" style="float:left;width:120px;margin:5px">
 											<p><strong>Shuo Wang</strong> is a student working towards his B.S. degree in Computer Science and Technology at School of Computer and Software in Nanjing University of Information Science and Technology.His areas of interest are  cloud computing and blockchain technology.</p>
