--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 									</tr>
 									<tr>
 										<td><img src=images/Photo/ShenBowen.JPG style="height:150px" title=""><p style="text-align:center">Bowen Shen</p></td>
-										<td><img src=images/Photo/HuangQihe.jpg style="height:150px" title=""><p style="text-align:center">Qihe Huang</p></td>
+										<td><img src=images/Photo/HuangQihe.JPG style="height:150px" title=""><p style="text-align:center">Qihe Huang</p></td>
 										<td><img src=images/Photo/YanXuan.JPG style="height:150px" title=""><p style="text-align:center">Xuan Yan</p></td>
 									</tr>
 									<tr>
