--- a/Team.html
+++ b/Team.html
@@ -121,7 +121,7 @@
 											<img src="images/Photo/ShenBowen.JPG" style="float:left;width:120px;margin:5px">
 											<p><strong>Bowen Shen</strong> is currently working towards his B.S. degree in Computer Science and Technology at School of Computer and Software in Nanjing University of Information Science and Technology. His research interests include edge computing and IoT.</p>
 											</br></br></br></br>
-											<img src="images/Photo/HuangQihe.jpg" style="float:left;width:120px;margin:5px">
+											<img src="images/Photo/HuangQihe.JPG" style="float:left;width:120px;margin:5px">
 											<p><strong>Qihe Huang</strong> is currently working towards his B.S. degree in Computer Science and Technology at Nanjing University of Information Science and Technology. His research interests include Internet of Things (IoT) and Mobile edge computing.</p>
 											</br></br></br></br>
 											<img src="images/Photo/YanXuan.JPG" style="float:left;width:120px;margin:5px">
