--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 									<header class="major">
 										<img src="images/Photo/XuXiaolong.jpg" style="float:right; margin:10px; padding:10px;" width="40%" height="auto">
 										<h3>Xiaolong Xu</h3>
-										<h4>School of Computer and Software<br/>
-											Nanjing University of Information Science and Technology<br/>
+										<h4>School of Computer and Software</br>
+											Nanjing University of Information Science and Technology</br>
 											Email:  <a href="mailto:xlxu@nuist.edu.cn">xlxu@nuist.edu.cn</a>
 										</h4>
 									</header>
