--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 									</tr>
 									<tr>
 										<td><img src=images/Photo/ShenBowen.JPG style="height:100px" title=""><p style="text-align:center">Bowen Shen</p></td>
-										<td><img src=images/Photo/HuangQihe.jpg style="height:100px" title=""><p style="text-align:center">Qihe Huang</p></td>
+										<td><img src=images/Photo/HuangQihe.JPG style="height:100px" title=""><p style="text-align:center">Qihe Huang</p></td>
 										<td><img src=images/Photo/YanXuan.JPG style="height:100px" title=""><p style="text-align:center">Xuan Yan</p></td>
 										<td><img src=images/Photo/WangShuo.jpg style="height:100px" title=""><p style="text-align:center">Shuo Wang</p></td>
 									</tr>
