--- a/Team.html
+++ b/Team.html
@@ -87,7 +87,7 @@
 						<!-- Two -->
 							<section id="two">
 								<div class="container">
-									<h4>bachelor</h4>
+									<h4>Bachelor</h4>
 									<ul style="text-align: justify;">
 										<div class="box">
 											</br>
