--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 						<!-- Three -->
 							<section id="three">
 								<div class="container">
-									<h3>Publications<a href="Publications.html" style="float:right;font:10px">Details</a></h3>
+									<h3>Publications<a href="Publications.html" style="float:right;font:10px">>Details</a></h3>
 									</br>
 									<ul style="text-align: justify;">
 										<li id="h.p_Aw1o70nnDu3c" class="TYR86d zfr3Q" style="white-space: normal;"><strong>[ICSOC'19] Xiaolong Xu,</strong> Yuan Xue, Lianyong Qi, Xuyun Zhang, Shaohua Wan, Wanchun Dou, Victor Chang. Load-aware Edge Server Placement for Mobile Edge Computing in 5G networks. The 17th International Conference on Service-Oriented Computing, 2019.<strong> (Accept Rate: 15%)</strong></li>
@@ -122,58 +122,58 @@
 						<!-- Four -->
 						<section id="four">
 							<div class="container">
-								<h3>Team<a href="Team.html" style="float:right;font:10px">Details</a></h3>
+								<h3>Team<a href="Team.html" style="float:right;font:10px">>Details</a></h3>
 								</br>
 								<table style="text-align:center">
 									<h4>Master</h4>
 									<tr>
-										<td><img src="images/Photo/FuShucun.png" style="height:133px"><p style="text-align:center">Shuncun Fu</p></td>
-										<td><img src=images/Photo/LiuXihua.jpg  style="height:133px" title=""><p style="text-align:center">Xihua Liu</p></td>
-										<td><img src=images/Photo/MoRuichao.jpg  style="height:133px" title=""><p style="text-align:center">Ruichao Mo</p></td>
+										<td><img src="images/Photo/FuShucun.png" style="height:130px"><p style="text-align:center">Shuncun Fu</p></td>
+										<td><img src=images/Photo/LiuXihua.jpg  style="height:130px" title=""><p style="text-align:center">Xihua Liu</p></td>
+										<td><img src=images/Photo/MoRuichao.jpg  style="height:130px" title=""><p style="text-align:center">Ruichao Mo</p></td>
 									</tr>
 									<tr>
-										<td><img src=images/Photo/ZhuDawei.jpg  style="height:133px" title=""><p style="text-align:center">Dawei Zhu</p></td>
-										<td><img src=images/Photo/WuQi.jpg  style="height:133px" title=""><p style="text-align:center">Qi Wu</p></td>
-										<td><img src=images/Photo/ZhangXing.jpg style="height:133px" title=""><p style="text-align:center">Xing Zhang</p></td>
+										<td><img src=images/Photo/ZhuDawei.jpg  style="height:130px" title=""><p style="text-align:center">Dawei Zhu</p></td>
+										<td><img src=images/Photo/WuQi.jpg  style="height:130px" title=""><p style="text-align:center">Qi Wu</p></td>
+										<td><img src=images/Photo/ZhangXing.jpg style="height:130px" title=""><p style="text-align:center">Xing Zhang</p></td>
 									</tr>
 									<tr>
-										<td><img src=images/Photo/HeChengxun.png style="height:133px" title=""><p style="text-align:center">Chengxun He</p></td>
+										<td><img src=images/Photo/HeChengxun.png style="height:130px" title=""><p style="text-align:center">Chengxun He</p></td>
 									</tr>
 								</table>
 								<table style="text-align:center">
 									<h4>Bachelor</h4>
 									<tr>
-										<td><img src=images/Photo/CaiQing.jpg style="height:133px" title=""><p style="text-align:center">Qing Cai</br>(graduated)</p></td>
-										<td><img src=images/Photo/LiuQingxiang.jpg style="height:133px" title=""><p style="text-align:center">Qingxiang Liu</p></td>
-										<td><img src=images/Photo/ChenYuhao.jpg style="height:133px" title=""><p style="text-align:center">Yuhao Chen</p></td>
+										<td><img src=images/Photo/CaiQing.jpg style="height:130px" title=""><p style="text-align:center">Qing Cai</br>(graduated)</p></td>
+										<td><img src=images/Photo/LiuQingxiang.jpg style="height:130px" title=""><p style="text-align:center">Qingxiang Liu</p></td>
+										<td><img src=images/Photo/ChenYuhao.jpg style="height:130px" title=""><p style="text-align:center">Yuhao Chen</p></td>
 									</tr>
 									<tr>
-										<td><img src=images/Photo/XueYuan.jpg style="height:133px" title=""><p style="text-align:center">Yuan Xue</p></td>
-										<td><img src=images/Photo/ChenYi.jpg  style="height:133px" title=""><p style="text-align:center">Yi Chen</p></td>
-										<td><img src=images/Photo/CaoHao.jpg  style="height:133px" title=""><p style="text-align:center">Hao Cao</p></td>
+										<td><img src=images/Photo/XueYuan.jpg style="height:130px" title=""><p style="text-align:center">Yuan Xue</p></td>
+										<td><img src=images/Photo/ChenYi.jpg  style="height:130px" title=""><p style="text-align:center">Yi Chen</p></td>
+										<td><img src=images/Photo/CaoHao.jpg  style="height:130px" title=""><p style="text-align:center">Hao Cao</p></td>
 									</tr>
 									<tr>
-										<td><img src=images/Photo/LiXiang.jpg  style="height:133px" title=""><p style="text-align:center">Xiang Li</p></td>
-										<td><img src=images/Photo/LiYuancheng.jpg  style="height:133px" title=""><p style="text-align:center">Yuancheng Li</p></td>
-										<td><img src=images/Photo/GengQingfan.jpg  style="height:133px" title=""><p style="text-align:center">Qingfan Geng</p></td>
+										<td><img src=images/Photo/LiXiang.jpg  style="height:130px" title=""><p style="text-align:center">Xiang Li</p></td>
+										<td><img src=images/Photo/LiYuancheng.jpg  style="height:130px" title=""><p style="text-align:center">Yuancheng Li</p></td>
+										<td><img src=images/Photo/GengQingfan.jpg  style="height:130px" title=""><p style="text-align:center">Qingfan Geng</p></td>
 									</tr>
 									<tr>
-										<td><img src=images/Photo/JiangGaoxing.jpg  style="height:133px" title=""><p style="text-align:center">Gaoxing Jiang</p></td>
-										<td><img src=images/Photo/HuangRui.jpg  style="height:133px" title=""><p style="text-align:center">Rui Huang</p></td>
-										<td><img src=images/Photo/FangZijie.jpg  style="height:133px" title=""><p style="text-align:center">Zijie Fang</p></td>
+										<td><img src=images/Photo/JiangGaoxing.jpg  style="height:130px" title=""><p style="text-align:center">Gaoxing Jiang</p></td>
+										<td><img src=images/Photo/HuangRui.jpg  style="height:130px" title=""><p style="text-align:center">Rui Huang</p></td>
+										<td><img src=images/Photo/FangZijie.jpg  style="height:130px" title=""><p style="text-align:center">Zijie Fang</p></td>
 									</tr>
 									<tr>
-										<td><img src=images/Photo/ShenBowen.JPG style="height:133px" title=""><p style="text-align:center">Bowen Shen</p></td>
-										<td><img src=images/Photo/HuangQihe.JPG style="height:133px" title=""><p style="text-align:center">Qihe Huang</p></td>
-										<td><img src=images/Photo/YanXuan.JPG style="height:133px" title=""><p style="text-align:center">Xuan Yan</p></td>
+										<td><img src=images/Photo/ShenBowen.JPG style="height:130px" title=""><p style="text-align:center">Bowen Shen</p></td>
+										<td><img src=images/Photo/HuangQihe.JPG style="height:130px" title=""><p style="text-align:center">Qihe Huang</p></td>
+										<td><img src=images/Photo/YanXuan.JPG style="height:130px" title=""><p style="text-align:center">Xuan Yan</p></td>
 									</tr>
 									<tr>
-										<td><img src=images/Photo/WangShuo.jpg style="height:133px" title=""><p style="text-align:center">Shuo Wang</p></td>
+										<td><img src=images/Photo/WangShuo.jpg style="height:130px" title=""><p style="text-align:center">Shuo Wang</p></td>
 									</tr>
 								</table>
 								<!--
 								<ul style="text-align: justify;">
-									<img src="images/Photo/FuShucun.png" style="float:left; margin:5px; padding:5px; text-align:center; height:133px; line-height:100%" >
+									<img src="images/Photo/FuShucun.png" style="float:left; margin:5px; padding:5px; text-align:center; height:130px; line-height:100%" >
 									<span style="text-align:left;"><strong>Shuncun Fu</strong> received his B.S. in Internet of Things Engineering from Binjiang College, Nanjing University of Information Science and Technology in 2017. Currently he is studying for a master’s degree in Software Engineering in Nanjing University of Information Science and Technology. His areas of interest are mobile computing, big data, cloud computing and machine learning.</span>
 								
 									<img src="images/Photo/LiuXihua.jpg" style="float:left; margin:5px; padding:5px;" height="150px" line-height="150px">
@@ -235,23 +235,23 @@
 						<!-- Five -->
 							<section id="five">
 								<div class="container">
-									<h3>Co-authors<a href="Co-authors.html" style="float:right;font:10px">Details</a></h3>
+									<h3>Co-authors<a href="Co-authors.html" style="float:right;font:10px">>Details</a></h3>
 								</br>
 								<table style="text-align:center">
 									<tr>
-										<td><img src=images/Photo/DouWanchun.jpg  style="height:133px" title=""><p style="text-align:center">Wanchun Dou</p></td>
-										<td><img src=images/Photo/QiLianyong.jpg  style="height:133px" title=""><p style="text-align:center">Lianyong Qi</p></td>
-										<td><img src=images/Photo/HeQiang.jpg  style="height:133px" title=""><p style="text-align:center">Qiang He</p></td>
+										<td><img src=images/Photo/DouWanchun.jpg  style="height:130px" title=""><p style="text-align:center">Wanchun Dou</p></td>
+										<td><img src=images/Photo/QiLianyong.jpg  style="height:130px" title=""><p style="text-align:center">Lianyong Qi</p></td>
+										<td><img src=images/Photo/HeQiang.jpg  style="height:130px" title=""><p style="text-align:center">Qiang He</p></td>
 									</tr>
 									<tr>
-										<td><img src=images/Photo/WanShaohua.jpg  style="height:133px" title=""><p style="text-align:center">Shaohua Wan</p></td>
-										<td><img src=images/Photo/ZhangXuyun.jpg  style="height:133px" title=""><p style="text-align:center">Xuyun Zhang</p></td>
-										<td><img src=images/Photo/LiShancang.jpg  style="height:133px" title=""><p style="text-align:center">Shancang Li</p></td>
+										<td><img src=images/Photo/WanShaohua.jpg  style="height:130px" title=""><p style="text-align:center">Shaohua Wan</p></td>
+										<td><img src=images/Photo/ZhangXuyun.jpg  style="height:130px" title=""><p style="text-align:center">Xuyun Zhang</p></td>
+										<td><img src=images/Photo/LiShancang.jpg  style="height:130px" title=""><p style="text-align:center">Shancang Li</p></td>
 									</tr>
 									<tr>
-										<td><img src=images/Photo/DaiFei.jpg  style="height:133px" title=""><p style="text-align:center">Fei Dai</p></td>
-										<td><img src=images/Photo/GaoHonghao.jpg  style="height:133px" title=""><p style="text-align:center">Honghao Gao</p></td>
-										<td><img src=images/Photo/YuanYuan.png  style="height:133px" title=""><p style="text-align:center">Yuan Yuan</td>
+										<td><img src=images/Photo/DaiFei.jpg  style="height:130px" title=""><p style="text-align:center">Fei Dai</p></td>
+										<td><img src=images/Photo/GaoHonghao.jpg  style="height:130px" title=""><p style="text-align:center">Honghao Gao</p></td>
+										<td><img src=images/Photo/YuanYuan.png  style="height:130px" title=""><p style="text-align:center">Yuan Yuan</td>
 									</tr>
 								</table>
 
